# SimCLR

./: .gitignore  README.md  pyproject.toml  run.py
configs/: simclr_config.yaml
simclr/: __main__.py  experiment.py
simclr/dataset/: augmentation.py  dataset.py
simclr/metrics/: accuracy.py  nt_xent.py
simclr/models/: encoder.py  lightning_model.py  projection_head.py  resnet_simclr.py
simclr/utils/: config.py  filesystem.py  parser.py
