[tool.poetry]
name = "simclr"
version = "0.1.0"
description = ""
authors = ["Robin Uhrich <robin.uhrich@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"
requests = "^2.32.3"
lightning = "^2.4.0"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
